# oldschool-clientc

./: .clang-format  .clangd  .env.template  .gitignore  .gitmodules  BUILD_SUCCESS.md  CMakeLists.txt  CMakePresets.json  CONVERSION_SUMMARY.md  DEBUG_CHECKLIST.md  DEBUG_SPRITE_OUTPUT.md  DIRECT_MODEL_LOADING.md  EMSCRIPTEN_WEBSOCKET_SETUP.md  FIX_OBJECT_CONFIG_LOADING.md  IMPLEMENTATION_COMPLETE.md  INVENTORY_IMPLEMENTATION.md  INVENTORY_SIDEBAR_UPDATE.md  LUA_MODEL_LOADING.md  OBJ_ICON_IMPLEMENTATION.md  OBJ_MODEL_FIX.md  OPENGLES2_CONVERSION_COMPLETE.md  OSX_EXAMPLE_COMPLETE.md  OSX_EXAMPLE_INTERFACE_GUIDE.md  OSX_EXAMPLE_QUICKREF.md  SPRITE_RENDERING_PLAN.md  UI_README.md  anim.json  compile_commands.json  debug_visibility.c  jad_model_post.txt  jad_model_pre.txt  jadanimmodel.vertices  magic  model.colors  model.vertices  model2.vertices  n.js  out.txt  profile.d  pyvenv.cfg  (+7 more)
.cursor/plans/: atlas_tile_uniforms_removal.plan.md  bucket_sort_memory_improvements.md  contourground_iterator_608ad0fd.plan.md  d3d8_fixed_trspk_refactor_57351327.plan.md  dash_model_uint16_buffers_d3863a7b.plan.md  dashhsl16_color_type_migration_f57e73b8.plan.md  dashmodel_memory-efficient_refactor_053abd20.plan.md  fix_memory_leaks_cleanup_9e4e626e.plan.md  (+21 more)
android/: .gitignore  ARM_BUILD_FIX.md  BUILD_PROGRESS.md  BUILD_STATUS.md  CMakeLists.txt  CURRENT_STATUS.md  FINAL_SETUP.bat  FIXED_ISSUES.md  README.md  SDL_ANDROID_DRIVER_FIX.md  SETUP_STATUS.md  build.gradle  build_android.bat  build_android.sh  debug.keystore  download_sdl2.bat  download_sdl2.sh  fix_gradle.bat  fix_java_version.bat  gradle.properties  local.properties  proguard-rules.pro  quick_setup.bat  quick_setup.sh  settings.gradle  setup_android.bat  setup_android.sh  setup_android_sdk.bat  setup_android_tools.bat  setup_sdl2.md  switch_to_java17.bat  test_sdl2_link.bat
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: android_main.cpp  android_platform.cpp  android_platform.h
android/src/main/cpp/SDL2/include/: SDL_config.h
android/src/main/java/com/scenetile/test/: MainActivity.java
android/src/main/java/org/libsdl/app/: SDLActivity.java
android/src/main/res/values/: strings.xml  themes.xml
assembly_dumps/: executable_info.txt  gouraud_deob_draw_triangle.dumpbin.symbols.txt  gouraud_deob_draw_triangle_main_client.asm  gouraud_deob_draw_triangle_model_viewer.asm  gouraud_deob_draw_triangle_model_viewer_obj.asm  raster_gouraud_s4_main_client.asm  raster_gouraud_s4_model_viewer.asm
assets/: static_ui.ini  static_ui_order.txt
clientts/: bundle.ts  dev-server.js
cmake/: FindSDL2.cmake
docs/: COLLISION_MAP_VERIFICATION.md  OCCLUDER_SYSTEM.md  PAINTER_ALGORITHM_IMPLEMENTATION.md  PERFORMANCE_IMPROVEMENTS_SUMMARY.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PIX3DGL_ES2_CONVERSION.md  PIX3DGL_ES2_QUICK_REFERENCE.md  PIX3DGL_ES2_VAO_HANDLING.md  QUICK_REFERENCE.md  RASTER_C_SYMBOL_RENAME_SCOPE.md  RASTER_DIRECTORY_MIGRATION.md  RASTER_VARIANT_CATALOGUE.md  UI_IMPLEMENTATION_SUMMARY.md  UI_INTEGRATION_PATCH.md  UI_QUICK_REFERENCE.md  UI_SYSTEM.md  WEBGL1_PLATFORM_IMPLEMENTATION.md  ZONE_PROTOCOL_IMPLEMENTATION.md  all_tiles_small.json  animations_cursor.txt  d3d8_renderer_architecture.md  gouraud_raster.c  log.txt  log2.txt  map_50_50_0.txt  mapme_50_50.txt  metal_renderer.md  osrs_cache_format.md  painter_algorithm_dynamic_ebo.md  painter_algorithm_example.c  pix3dgl_static_scene_api.md  raster_scanlines_thedaneeffect.txt  texture_mapping.txt  texture_mapping_derivation.txt  to_bin.js
dwarf/: model.faces  model.priorities
public/: index.html  shell.html  shell2.html
res/: animate_texture.java  anims  callgrind.deob-faster-than-s4.out.358480
sample/: 2650.json
scripts/: .bash_profile  .bashrc  Dash3D_WorldFill.cpp  Dash3D_WorldRender.cpp  MainDraw.cpp  Microsoft.Powershell_profile.ps1  ModelDraw_NXT.cpp  ServerProt.js  ServerProt.ts  a.out  bin_to_c_array.js  build-gameio.sh  build_browser.ps1  build_browser.sh  chrome_debug.sh  cmp.js  contiguous_buffer.c  copy_browser_files.ps1  dir_http_server_py32.py  dump_assembly.bat  dump_assembly.ps1  dump_assembly.sh  fade.js  gather_profile_aout.js  gen_arr.js  gen_cos_table.js  gen_gouraud_deob.py  gen_painter_ucs.py  gen_projection16_fused_chunks.py  gen_texture_deob.py  hit.py  inspect_debug_paths.bat  inspect_debug_paths.sh  lua_to_c.py  map_50_50_0.txt  mapme_50_50.txt  max_greater_w.py  out.txt  print_line.py  rename_cullmaps_nz_to_f.sh  (+8 more)
src/: ConfigReferenceTable.txt  LibToriPlatform.c  LibToriPlatform.h  LibToriRSPlatformC.c  LibToriRSPlatformC.h  LibToriRSPlatformJS.c  SceneBuilder.ts  Shaders.metal  anim.c  anim.h  bmp.c  bmp.h  buffer.c  buffer.h  command_buffer.h  default_cullmap.u.c  dummy.c  dummy2.c  flat.c  flat.h  frame.c  frame.h  framemap.c  framemap.h  gouraud.c  gouraud.h  gouraud_deob.c  gouraud_deob.h  jbase37.c  jbase37.h  libg.c  libg.h  libgame.c  libgame.h  libgame.u.h  libinput.c  libinput.h  lighting.c  lighting.h  load_separate.c  (+49 more)
test/: PROXY_README.md  README_model_viewer.md  README_software_model_viewer.md  asset_server.c  browser.cpp  browser_native.cpp  convex_hull_benchmark  convex_hull_benchmark.c  emscripten_sdl2_webgl1.cpp  inc.c  model_viewer.cpp  model_viewerfx.cpp  osrs_cache_test.c  osx.cpp  osx_sdl2.cpp  package.json  proxy-server.js  scene_tile_test.c  scene_tile_test.cpp  scene_tile_test2.c  scene_tile_test_browser.c  scene_tile_test_imgui_browser.cpp  sdl2.cpp  speed_test.cpp  test.js  test_asset_client.c  test_asset_server.sh  tiles_test.c  win32.cpp  xtea_test.c
tools/: README.md  _gen_d3d8_fixed_events.py  _gen_d3d8_fixed_state.py  gen_lua_api_ht.py  package_build.py  package_build.readme.md  patch_interface_remaining.py
wizard_hat_chat_model/: model.colors  model.faces  model.priorities  model.vertices
www/: BUILD_WINXP.md  WINXP_BUILD_FILES.txt  WINXP_QUICKSTART.txt  build_winxp_quick.bat  clean_winxp.bat  install_freetype.ps1  install_sdl2.ps1  mingw_shell.bat  mingw_shell_bash.bat  mingw_shell_simple.bat  setup_sdl2_winxp.bat  test_winxp_build.bat
(+941 files in other folders)
